samples/_failures_safe/1761362895_5dfb18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a51fd330.c: In function ‘main’:
./samples/SAFE/__tmp_a51fd330.c:147:13: error: expected declaration or statement at end of input
  147 |             printf("Decompression failed\n\n");
      |             ^~~~~~
./samples/SAFE/__tmp_a51fd330.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a51fd330.c:147:13: error: expected declaration or statement at end of input
